--- a/FullCycle/index.html
+++ b/FullCycle/index.html
@@ -7,8 +7,6 @@
     <link href="/src/styles.css" rel="stylesheet">
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">
-      Hello world!
-    </h1>
+    <button>Click me</button>
   </body>
 </html>
